--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.flowingcode.addons</groupId>
+            <artifactId>font-awesome-iron-iconset</artifactId>
+            <version>2.2.1</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.vaadin.addons</groupId>-->
+<!--            <artifactId>fontawesomelabel</artifactId>-->
+<!--            <version>1.4.0</version>-->
+<!--        </dependency>-->
+        <dependency>
             <groupId>com.vaadin</groupId>
             <!-- Replace artifactId with vaadin-core to use only free components -->
             <artifactId>vaadin</artifactId>
